--- a/Day-01/01-SOC/index-2.html
+++ b/Day-01/01-SOC/index-2.html
@@ -25,32 +25,41 @@
 
 		//Model
 		function SalaryCalculator(){
-			//this.basic = 0;
-			var _basic = 0;
-			this.onBasicChange = null;
-			this.getBasic = function(){
-				return _basic;
+			var _data = {
+				basic : 0,
+				hra : 0,
+				da : 0,
+				tax : 0,
+				salary : 0
 			}
-			this.setBasic = function(value){
-				_basic = value;
-				if (typeof this.onBasicChange === 'function')
-					this.onBasicChange();
+			this.get = function(attrName){
+				return _data[attrName]
+			};
+			this.set = function(attrName, value){
+				_data[attrName] = value;
+				//trigger change notification for 'attrName'
+				var eventHandlerFn = _eventHandlers[attrName];
+				if (typeof eventHandlerFn === 'function')
+					eventHandlerFn();
+			};
+
+			var _eventHandlers = {
+				basic : null,
+				hra : null,
+				da : null,
+				tax : null,
+				salary : null
+			};
+
+			this.subscribe = function(attrName, eventHandlerFn){
+				_eventHandlers[attrName] = eventHandlerFn;
 			}
-
-
-			this.hra = 0;
-			this.da = 0;
-			this.tax = 0;
-			this.salary = 0;
-
-			this.onSalaryChange = null;
 		}
 		SalaryCalculator.prototype.calculate = function(){
-			var gross = this.getBasic() + this.hra + this.da;
-			var net = gross * ((100-this.tax)/100);
-			this.salary = net;
-			if (typeof this.onSalaryChange === 'function')
-				this.onSalaryChange();
+			var gross = this.get('basic') + this.get('hra') + this.get('da');
+			var net = gross * ((100-this.get('tax'))/100);
+			this.set('salary', net);
+			
 		}
 
 		//View
@@ -58,16 +67,16 @@
 			window.calculator = new SalaryCalculator();
 
 			$("#txtBasic").change(function(){
-				calculator.setBasic( $("#txtBasic").val().toInt() );
+				calculator.set('basic', $("#txtBasic").val().toInt());
 			});
 			$("#txtHra").change(function(){
-				calculator.hra = $("#txtHra").val().toInt();
+				calculator.set('hra', $("#txtHra").val().toInt());
 			});
 			$("#txtDa").change(function(){
-				calculator.da = $("#txtDa").val().toInt();
+				calculator.set('da', $("#txtDa").val().toInt());
 			});
 			$("#rangeTax").change(function(){
-				calculator.tax = $("#rangeTax").val().toInt();
+				calculator.set('tax', $("#rangeTax").val().toInt());
 			});
 			
 			$("#btnCalulate").click(function(){
@@ -75,16 +84,24 @@
 
 				
 			});
-			$("#rangeTax").change(function(){
-				$("#spanTax").html(this.value);
-			});
+			
 
-			calculator.onSalaryChange = function(){
-				$("#divResult").html('Rs.' + calculator.salary);
-			};
-			calculator.onBasicChange = function(){
-				$("#txtBasic").val(calculator.getBasic())
-			}
+			calculator.subscribe('salary', function(){
+				$("#divResult").html('Rs.' + calculator.get('salary'));
+			});
+			calculator.subscribe('basic', function(){
+				$("#txtBasic").val(calculator.get('basic'));
+			});
+			calculator.subscribe('hra', function(){
+				$("#txtHra").val(calculator.get('hra'));
+			});
+			calculator.subscribe('da', function(){
+				$("#txtDa").val(calculator.get('da'));
+			});
+			calculator.subscribe('tax', function(){
+				$("#rangeTax").val(calculator.get('tax'));
+				$("#spanTax").html(calculator.get('tax'));
+			});
 		});
 
 	</script>
